Another clarification about meta-crisis

--- a/2024-03-11-thought-dissection.org
+++ b/2024-03-11-thought-dissection.org
@@ -607,55 +607,69 @@ their maker. None of this applies to life, nor does it to anything
 else in the Universe.
 
 The brilliant mathematician and biophysicist Robert Rosen in his book
-life itself demonstrates just how unlike machines organisms are he
+life itself demonstrates just how unlike machines organisms are. He
 further argues that the best way to understand all naturally occurring
-systems which are never merely complicated but complex and therefore
-never fully predictable is as organisms whether we choose to see them
-as alive or not and that's before one gets to consider the neglect of
-our emotional moral and spiritual nature which is at the core of Being
-Human we seem to have been seduced into thinking we understand
-everything and what's more can Master it and mold it like a machine so
-as to provide a future that will benefit mankind that this is a malign
-fantasy becomes pler with every passing day those with grand schemes
-to improve Humanity have caused misery on an almost unimaginable scale
-by their narcissism cruelty and willful blindness in Psychology
-there's something called the Dunning Krueger effect which tells us
-that the less people know the more they think they know it's hardly
-rocket science I admit but it is worth bearing in mind instead of
-seeing all things as processes running organically from the past to
-the Future across time and spreading out across the world through
-space like water finding its way across a landscape we see ourselves
-and the world as composed of static slices or points Here and Now
-compartmentalized in a way that conforms to the modus operandi of of
-the left hemisphere a world of meaningless bits we owe nothing to and
-can learn nothing from history or so we believe we owe nothing to and
-Lead need leave nothing to posterity we turn a blind eye to the
-inevitable impact of our rapacity on more humble and more stable ways
-of life that have stood the test of time better than ours we neglect
-the importance of context we believe we are right and that one size
-fits all justifying the imposition of vast Global bureaucratic
-structures not to say Wars so as to impose our thinking on cultures
-far different from our own equally we arrogantly critique our
-ancestors for not sharing the idiosyncratic view of the world we've
-generated in the last 20 years and which we believe must now be forced
-on all whatever their reasonable misgivings and we treat people people
-not as unique living beings but as exemplars of a category one aspect
-of this is the virtual machine known as bureaucracy famously har arand
-referred to the banality of evil one of the most disquieting aspects
-of the Nazi regime was its chilling bureaucracy mind-numbing evil was
-committed by people who were for the most part not conventional
-monsters but were simply following the ordained procedures real people
-and real life had been almost wholly obscured by pieces of paper and
-the recording of numbers after the war Theodor adoro saw developing
-around him what he called theal the administered World in which
-everything was controlled proceduralized and devitalized inevitably at
-that point in history this could not be separated from the evil that
-was narcisism but adoro can see that it was much more than that
-narcism was at least as much a symptom of a new mentality as its cause
-a mentality of total control that had taken root in the form of a
-self- legitimizing bureaucracy the roots of which lay in the past he
-quoted the mid 19th century orrian writer Ferdinand ker life no longer
-lives who does not recognize with a chill this diagnosis of the modern
+systems which are never merely complicated, but complex, and,
+therefore, - =never fully predictable=, is as organisms whether we
+choose to see them as alive or not. And that's before one gets to
+consider the neglect of our emotional moral and spiritual nature which
+is at the core of Being Human.
+
+We seem to have been seduced into thinking we understand everything
+and what's more can Master it and mold it like a machine so as to
+provide a future that will benefit mankind. This is a malign fantasy
+becomes pler with every passing day those with grand schemes to
+improve Humanity have caused misery on an almost unimaginable scale by
+their narcissism cruelty and willful blindness.
+
+In psychology there's something called the Dunning Krueger effect
+which tells us that the less people know the more they think they know.
+
+It's hardly rocket science, I admit, but it is worth bearing in mind
+instead of seeing all things as processes running organically from the
+past to the Future across time and spreading out across the world
+through space like water finding its way across a landscape. We see
+ourselves and the world as composed of static slices or points Here
+and Now compartmentalized in a way that conforms to the modus operandi
+of of the left hemisphere - a world of meaningless bits.
+
+
+We owe nothing to and can learn nothing from history or so we believe
+we owe nothing to and Lead need leave nothing to posterity. We turn a
+blind eye to the inevitable impact of our rapacity on more humble and
+more stable ways of life that have stood the test of time better than
+ours. We neglect the importance of context, we believe we are right and
+that one size fits all justifying the imposition of vast global
+bureaucratic structures. Not to say Wars so as to impose our thinking
+on cultures far different from our own. Equally we arrogantly critique
+our ancestors for not sharing the idiosyncratic view of the world
+we've generated in the last 20 years and which we believe must now be
+forced on all whatever their reasonable misgivings, - and we treat people
+people not as unique living beings but as exemplars of a category.
+
+One aspect of this is the virtual machine known as bureaucracy.
+Famously Hannah Arendt referred to the banality of evil, - one of the
+most disquieting aspects of the Nazi regime was its chilling
+bureaucracy. Mind-numbing evil was committed by people who were for
+the most part not conventional monsters but were simply following the
+ordained procedures. Real people and real life had been almost wholly
+obscured by pieces of paper and the recording of numbers.
+
+After the war Theodor Adorno saw developing around him what he called
+theal the administered World in which everything was controlled
+proceduralized and devitalized. Inevitably at that point in history
+this could not be separated from the evil that was narcisism but
+Adorno can see that it was much more than that: _Narcism was at least
+as much a symptom of a new mentality_ as its cause, - a mentality of
+total control that had taken root in the form of a self-legitimizing
+bureaucracy, the roots of which lay in the past. He quoted the mid
+19th century Austrian writer Ferdinand Kürnberger:
+
+#+begin_quote
+Life no longer lives.
+#+end_quote
+
+Who does not recognize with a chill this diagnosis of the modern
 human predicament and adoro points out that it is not even the Triumph
 of The Logical since Administration serves to rationalize the
 irrational which explains why its workings and outcomes are often
