A pertinent quote about leadership

--- a/2024-03-20-team-synergy-incubation.org
+++ b/2024-03-20-team-synergy-incubation.org
@@ -71,6 +71,12 @@ Let's form proactive synergy restructuring teams
 /-- Scott Adams/
 #+end_quote
 
+#+begin_quote
+Leadership is the capacity to translate vision into reality
+
+/-- Warren G. Bennis/
+#+end_quote
+
 * AntiThesis
 
 ** The Peter Principle
