A clot for every slot concept introduction

--- a/2024-03-20-team-synergy-incubation.org
+++ b/2024-03-20-team-synergy-incubation.org
@@ -81,6 +81,25 @@ Leadership is the capacity to translate vision into reality
 
 ** The Peter Principle
 
+** A Clot for Every Slot
+
+From the uper level, where most chiefs are at their point incopetence,
+the most feasible and pertinent candidate for _assignment is the most
+defty and experienced employee_. But, in this case, team has lost a
+valuable and productive member in exchange of a dim perspective to
+obtain a good enough team leader. A good leadership requires an
+additional set of inter-personal skills and a huge experience in this
+area to be noble, authoritative and competent. In addition there is no
+guarantee that a new-assigned advanced executionist is apt enough to
+learn these new for him skillset in a sure and fire manner.
+
+And, /at the unconscious level of thinking/: if this employee is
+capable to be competent, the probability of his competency after
+assinment is high enough to make a menace for the Boss.
+
+Another polar point of view is to make an _assignment for the most
+incompetent employee_. In this case the team will lost the value near
+a zero, the perspective of his succeeding  
 
 ** Real-Life Experience
 
