--- a/2024-03-22-playwright-init.org
+++ b/2024-03-22-playwright-init.org
@@ -218,3 +218,89 @@ wheel              0.38.4
 #+end_example
 
 * Testing
+
+Lets create a separate folder to test up =PlayWright= in a proper way:
+
+#+begin_src sh :results output :exports both
+  pwd 2>&1
+  cd ~ 2>&1
+  pwd 2>&1
+  mkdir -p playwright/tests 2>&1
+  ls playwright 2>&1
+#+end_src
+
+#+RESULTS:
+: /home/alioth/Git/0--key/org-pub
+: /home/alioth
+: tests
+
+#+begin_src sh :results output :exports both
+   ls ~/playwright 2>&1
+#+end_src
+
+#+RESULTS:
+: tests
+
+And the =Python= file with a couple of =pytest= s inside:
+
+#+begin_src python :tangle /home/alioth/playwright/tests/test_example.py
+  import re
+  from playwright.sync_api import Page, expect
+
+  def test_has_title(page: Page):
+      page.goto("https://playwright.dev/")
+
+      # Expect a title "to contain" a substring.
+      expect(page).to_have_title(re.compile("Playwright"))
+
+  def test_get_started_link(page: Page):
+      page.goto("https://playwright.dev/")
+
+      # Click the get started link.
+      page.get_by_role("link", name="Get started").click()
+
+      # Expects page to have a heading with the name of Installation.
+      expect(page.get_by_role("heading", name="Installation")).to_be_visible()
+#+end_src
+
+Check up is it all on its place:
+
+#+begin_src sh :results output :exports both
+   ls ~/playwright/tests 2>&1
+#+end_src
+
+#+RESULTS:
+: test_example.py
+
+Launch the =pytest= up!
+
+#+begin_src sh :results output :exports both
+  cd ~/playwright/
+  pwd 2>&1
+  pytest 2>&1
+#+end_src
+
+#+RESULTS:
+#+begin_example
+/home/alioth/playwright
+============================= test session starts ==============================
+platform linux -- Python 3.11.2, pytest-8.1.1, pluggy-1.4.0
+rootdir: /home/alioth/playwright
+plugins: base-url-2.1.0, playwright-0.4.4
+collected 2 items
+
+tests/test_example.py ..                                                 [100%]
+
+============================== 2 passed in 3.34s ===============================
+#+end_example
+
+* Conclusion
+
+#+begin_quote
+Tests are run in headless mode meaning no browser UI will open up when
+running the tests. Results of the tests and test logs will be shown in
+the terminal.
+#+end_quote
+
+Now, the output says loud and clear that it works as expected even
+inside =Emacs= =Babel= environment.
