The set of biological premises

--- a/2024-03-20-team-synergy-incubation.org
+++ b/2024-03-20-team-synergy-incubation.org
@@ -79,6 +79,20 @@ Leadership is the capacity to translate vision into reality
 
 * AntiThesis
 
+** Biology
+
+Human beings just despise any hierarchy uncosciously: in nature they
+can't gather in a large group due to lack of abundant and reliable
+resources - so it is evolutionary the question of life and death for
+each member of a group. In one hand the natural (and efficient) group
+should be big enough to defend itself, in another - it can't be big to
+provide to each member an ability to obtain the suffice amount of food
+from the scarce environment around them. So, millions years of
+evolution target our biological species to be in comfort in a small
+group with _one and only one leader and foregoer_- most experienced,
+strong and competent male. Nowadays this model with minor deviations
+is widespread across a plethora of indigenous tribes.
+
 ** The Peter Principle
 
 ** A Clot for Every Slot
