--- a/2024-03-20-team-synergy-incubation.org
+++ b/2024-03-20-team-synergy-incubation.org
@@ -93,6 +93,14 @@ group with _one and only one leader and foregoer_- most experienced,
 strong and competent male. Nowadays this model with minor deviations
 is widespread across a plethora of indigenous tribes.
 
+** History
+
+All known evidences testify the average size of group of humans was
+10-15 members for 100,000 years BC, and only last 5,000 years its
+quantity increased from place to place, not ubiquitously though, only
+in towns and cities.
+
+
 ** The Peter Principle
 
 ** A Clot for Every Slot
