Eval:no-eport tag in the file header

--- a/2024-01-16-python-ide.org
+++ b/2024-01-16-python-ide.org
@@ -10,7 +10,7 @@ tags: [efficiency, software development]
 #+END_EXPORT
 
 #+STARTUP: showall indent
-#+OPTIONS: tags:nil num:nil \n:nil @:t ::t |:t ^:{} _:{} *:t
+#+OPTIONS: tags:nil num:nil \n:nil @:t ::t |:t ^:{} _:{} *:t eval:no-export
 #+TOC: headlines 2
 * Intro
 
