--- a/2016-11-12-toys-tasks.org
+++ b/2016-11-12-toys-tasks.org
@@ -289,6 +289,8 @@ tags: [coding, algorithms]
       assert(last_digit(2 ** 200, 2 ** 300) == 6)
     #+END_SRC
 
+    #+RESULTS:
+
 * #3 How many times does it contain?
 
 ** Description
@@ -309,7 +311,8 @@ tags: [coding, algorithms]
      def string_counter(string, char):
          return string.count(char)
 
-     assert(string_counter('Hello World', 'o') == 2)
+
+     assert (string_counter('Hello World', 'o') == 2)
    #+END_SRC
 
    #+RESULTS:
