Further steps in thought formation subtleties dissection

--- a/2024-03-11-thought-dissection.org
+++ b/2024-03-11-thought-dissection.org
@@ -669,81 +669,107 @@ bureaucracy, the roots of which lay in the past. He quoted the mid
 Life no longer lives.
 #+end_quote
 
-Who does not recognize with a chill this diagnosis of the modern
-human predicament and adoro points out that it is not even the Triumph
-of The Logical since Administration serves to rationalize the
-irrational which explains why its workings and outcomes are often
-deeply unreasonable and deeply damaging the cancerous growth of more
-and more elaborate and more and more expensive bureaucracies in the
-world I particularly know hospitals and universities but the same
-could be said of government schools and the police is an inevitable
-and dangerous consequence of the world view we've adopted the other if
-possible still more dangerous expansion is that of AI bureaucracy and
-ai go hand in hand enlarging the Empire of the left hemisphere and
-making possible if not inevitable in the near future almost total
-control of the populace by any regime however malignant as we broaden
-our view it becomes apparent how much The Meta crisis can best be seen
-as a war on nature and a war on life this my friends is the reality we
-face why on Earth should such a suicidal War come about there are
-three reasons that spring to mind one is that the left hemisphere
-which makes that's what Benjamin Franklin called The Tool making
-animal thinks like a machine and has therefore exported machine like
-thinking into our environment everywhere nature and life are therefore
-ultimately an impediment the second is that the left hemisphere really
-only understands its own representations what it itself has made and
-given to itself nature and life are therefore ultimately
-incomprehensible and the third and most important is the resentfulness
-of a mind that believes it understands and can and what's more should
-control all its surveys here nature and life are a rebuff to its power
-a rebuff which cannot be tolerated the German American Artist George
-gross produced a shockingly vivid expression of this mindset as he
-contemplated Europe before the second world war entitled I shall
+Who does not recognize with a chill this diagnosis of the modern human
+predicament. And adoro points out that it is not even the Triumph of
+The Logical since Administration serves to rationalize the irrational
+which explains why its workings and outcomes are often deeply
+unreasonable and deeply damaging. The cancerous growth of more and
+more elaborate and more and more expensive bureaucracies in the world
+I particularly know: hospitals and universities, but the same could be
+said of government, schools and the police, - is an inevitable and
+dangerous consequence of the world view we've adopted.
+
+The other if possible still more dangerous expansion is that of AI.
+Bureaucracy and ai go hand in hand enlarging the Empire of the left
+hemisphere and making possible if not inevitable in the near future
+almost total control of the populace by any regime however malignant.
+
+
+As we broaden our view it becomes apparent how much the ~meta crisis~
+can best be seen as a _war on nature and a war on life_.
+
+This my friends is the reality we face: why on Earth should such a
+suicidal War come about?
+
+There are three reasons that spring to mind one is that the left
+hemisphere which makes, that's what Benjamin Franklin called /the tool
+making animal/, thinks like a machine and has therefore exported machine
+like thinking into our environment everywhere. Nature and life are
+therefore ultimately an impediment.
+
+The second is that the left hemisphere really only understands its own
+representations what it itself has made and given to itself. Nature and
+life are therefore ultimately incomprehensible.
+
+And the third and most important is the resentfulness of a _mind that
+believes it understands and can and what's more should control all its
+surveys_.
+
+Here nature and life are a rebuff to its power: a rebuff
+which cannot be tolerated. The German American Artist George Gross
+produced a shockingly vivid expression of this mindset as he
+contemplated Europe before the second world war, entitled I shall
 extinguish everything around me that restricts me from being the
-master the Contemporary fantasy that we can be whatever we want and do
+master.
+
+The contemporary fantasy that we can be whatever we want and do
 whatever we want is a cruel travesty of the truth this was never true
-and never could be it is the product of a culture of narcissistic
-fragmentation ironically we've invented new impediments to its
-fulfillment we now live in a world in which you cannot speak or act
-and until you've put each word before a humorous in a tribunal which
-is ready to say no to everything you want to say or do I'm of course a
-boring old stick but I feel so sorry for young people now whatever
-happened to the spontaneous act the sense of J to the movement of the
-spirit out of sheer exaltation even an Impulse to visit a gallery soon
-runs into the need to have booked weeks ahead ahead using an app and
-that's just getting into a gallery what about negotiating the
-numberless hazards of a date life no longer lives wisdom skill
-judgment intuition and even understanding all to be gained only from a
-life well- lived have been sidelined in favor of machine-like
-algorithms that stifle true thought the assault on life continues as
-far as a mechanic as far as a mechanical system is concerned human
-beings must be dispensable and wholly interchangeable in fact despite
-the rhetoric true diversity is not to be tolerated imaginative
-eccentrics lose their jobs humans must have no allegiances which might
-conflict with their duty to fit into their slot thus it is that we've
-seen concerted attacks on the idea that there are any differences
-between men and women attempts to brainwash children attacks on family
-and K ship with their rightful claims on loyalty on the professions
-with their expertise which must be replaced by blind rule following
-and their codes of Ethics which a machine cannot understand and which
-is therefore replaced by the pretense that teachers doctors and
-Priests are just providing a service to Consumers rather than
-embodying what are ultimately sacred duties indeed that anything
-should be sacred it isn't the front to the power hungry left
-hemisphere dominated mind belief in a Divine Cosmos is seen as
-standing in the way of whatever Society the machine hurtles us towards
-Milton saw it all Lucifer the bright cannot bear the imputation of
-anything higher than he and the Very word Society reminds us that no
-properly functioning Society is mechanistic so we see social cohesion
-dissipate and Living Traditions erased in their place fragmentation
-the stoking of resentment and a rise of aggression this in turn is
-deemed to require what the toille pressingly described as a network of
-small complicated rules that he fora would come to strangle life
-itself once the Integrity founded in an intuitive moral sense is lost
-a society becomes like a building that has lost its integrity and
-needs to be shored up with ever more scaffolding now there has to be a
-law for everything yet crime escalates why when we see how devastating
-this process can be do we carry on promoting it the physicist David
-bone reflected on a phenomenon he called sustained incoherence
+and never could be. It is the product of a culture of narcissistic
+fragmentation.
+
+Ironically we've invented new impediments to its fulfillment - we now
+live in a world in which you cannot speak or act and until you've put
+each word before a humorous in a tribunal which is ready to say no to
+everything you want to say or do. I'm of course a boring old stick but
+I feel so sorry for young people now whatever happened to the
+spontaneous act the sense of J to the movement of the spirit out of
+sheer exaltation: even an impulse to visit a gallery soon runs into the
+need to have booked weeks ahead, ahead using an app! And that's just
+getting into a gallery!
+
+What about negotiating the numberless hazards of a date life no longer
+lives. Wisdom, skill, judgment, intuition and even understanding all to be
+gained only from a life well-lived have been sidelined in favor of
+machine-like algorithms.
+
+That stifle true thought the assault on life continues as far as a
+mechanic as far as a mechanical system is concerned human beings must
+be dispensable and wholly interchangeable.  In fact, despite the
+rhetoric, true diversity is not to be tolerated: imaginative
+eccentrics lose their jobs, humans must have no allegiances which
+might conflict with their duty to fit into their slot. Thus it is that
+we've seen concerted attacks on the idea that there are any
+differences between men and women, attempts to brainwash children,
+attacks on family and king-ship with their rightful claims on loyalty. On
+the professions with their expertise which must be replaced by blind
+rule following and their codes of ethics which a machine cannot
+understand and which is, thereforem replaced by the pretense that
+teachers, doctors and priests are just providing a service to consumers,
+rather than embodying what are /ultimately sacred duties/.
+
+Indeed that anything should be sacred it isn't the front to the power
+hungry left hemisphere. Dominated mind belief in a =Divine Cosmos= is
+seen as standing in the way of whatever society the machine hurtles us
+towards.
+
+Milton saw it all Lucifer:
+
+#+begin_quote
+the bright cannot bear the imputation of anything higher than he
+#+end_quote
+
+And the very word ~society~ reminds us that no properly functioning
+society is mechanistic. So we see social cohesion dissipate and Living
+Traditions erased in their place fragmentation the stoking of
+resentment and a rise of aggression this in turn is deemed to require
+what the toille pressingly described as a network of small complicated
+rules that he fora would come to strangle life itself once the
+Integrity founded in an intuitive moral sense is lost a society
+becomes like a building that has lost its integrity and needs to be
+shored up with ever more scaffolding now there has to be a law for
+everything yet crime escalates why when we see how devastating this
+process can be do we carry on promoting it the physicist David bone
+reflected on a phenomenon he called sustained incoherence
 characteristic of what he called thought the thought process we now
 know to be typical of the left hemisphere what he meant was that on
 seeing incoherence it would be intelligent to stop look for the cause
