--- a/2024-03-27-code-wars-with-tdd.org
+++ b/2024-03-27-code-wars-with-tdd.org
@@ -27,7 +27,7 @@ tags: [efficiency, software development]
          # your code here
          for letter in inputStr:
              list_of_vowels = ['a', 'e', 'i', 'o', 'u']
-             if letter in list_of_vowels:
+             if letter.lower() in list_of_vowels:
                  num_vowels += 1
                  # print(letter)
                  # print(num_vowels)
@@ -43,15 +43,21 @@ tags: [efficiency, software development]
    #+RESULTS:
    : 9
 
-** Test 001
+** TODO Test 001
 #+begin_src python :results output :exports both :tangle CodeWars/tests/test_number_vowels.py :comments link
   import unittest
   from CodeWars.functions import getCount, input_string
 
-
   class TestNumberVowelsInString(unittest.TestCase):
 
-      def test_its_freaking_number(self):
+      def setUp(self):
+          self.variable_inside_test_suite = "Alioth"
+
+      def test_innate_variable(self):
+          self.assertEqual(getCount(self.variable_inside_test_suite), 3)
+          #pass
+
+      def test_imported_values(self):
           print("Hello, its the first test!")
           self.assertEqual(getCount(input_string), 9)
 #+end_src
