Several minor corrections

--- a/2016-10-13-CV.org
+++ b/2016-10-13-CV.org
@@ -147,8 +147,7 @@ All that I only dreamt on to have in my hands as a ~flexible~ and
   - In other words the desired aim should be a /knowledge
     multiplication/: sustainable state of continuous intellectual
     advancements for each collaborator in particular;
-  - I see myself in the team of professionals with mostly contiguous
-    skills;
+  - I see myself in the team of professionals with contiguous skills;
   - Right now for professional growth I'm crucially need in /knowledge
     exchange/: who knows something fascinating and would share it with
     me, please?
@@ -159,8 +158,8 @@ All that I only dreamt on to have in my hands as a ~flexible~ and
 * \epsilon{}macs
 
 The rule of thumb is: the tough task split requires a handy and mighty
-tool in your hand. Mighty tool demandss a lot of time and patience to
-become handy.
+tool in your hand. Mighty tool demands a lot of time, persistence and
+patience to become handy.
 
 All tasks are tough enough to be cracked by mighty tool in several
 deft gestures; most of the people haven't time to learn any potent
